--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -414,7 +414,7 @@ header {
 }
 
 .Modern-Slider .item-1 .image {
-  background-image: url(../img/slide_1.jpg);
+  background-image: url(../img/slide_1.png);
 }
 
 .Modern-Slider .item-2 .image {
